# realtime-event-pipeline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMORY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  database.py  middleware.py  models.py  router.py  server.py
tests/: test_server.py
