[project]
name = "realtime-event-pipeline"
version = "1.0.0"
description = "Real-time event ingestion, routing, and delivery for educational platforms"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
